Add Kurdish translations for RolePlay & fix chat input bar positioning

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 # Google AI API Key - Get yours at https://makersuite.google.com/app/apikey
-VITE_GOOGLE_AI_API_KEY=your_api_key_here
+
+# For LOCAL development (if running client-side directly - not recommended for production)
+# VITE_GOOGLE_AI_API_KEY=your_api_key_here
+
+# For PRODUCTION (Vercel) - Set this in Vercel Dashboard > Project Settings > Environment Variables
+# This keeps your API key secure on the server side
+GOOGLE_AI_API_KEY=your_api_key_here
